tests/examples/good/misc/good004.lat
int main() {
    int a, b = 4 + 3;
    boolean b1 = true;
    a = 1;
    b = -2;
    b1 = false;
    return 0;
}
