tests/examples/bad/duplicate_function_argument.lat
int main() {
    return 1;
}

int f(int a, int a) { return 1; }